<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnBasicIntegration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickBasicIntegration"
        android:text="@string/btn_basic_integration" />

    <Button
        android:id="@+id/btnAdvancedIntegration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBasicIntegration"
        android:onClick="clickAdvancedIntegration"
        android:text="@string/btn_advanced_integration" />

    <Button
        android:id="@+id/btnDiscoveryWidgetIntegration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAdvancedIntegration"
        android:onClick="clickDiscoveryWidgetIntegration"
        android:text="@string/btn_discovery_widget"/>

    <Button
        android:id="@+id/btnDiscoveryWidgetPagerIntegration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDiscoveryWidgetIntegration"
        android:onClick="clickDiscoveryWidgetsPagerIntegration"
        android:text="@string/btn_discovery_widget_pager"/>

    <Button
        android:id="@+id/btnLiveSdkImplementationPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDiscoveryWidgetPagerIntegration"
        android:onClick="clickSdkFromScratchPreview"
        android:text="@string/btn_sdk_from_scratch_demo"/>
</RelativeLayout>